--- a/FDBMicroService/FDBWebApiService/appsettings.json
+++ b/FDBMicroService/FDBWebApiService/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ApiSettings": {
+    "FDBBaseUrl": "https://api.fdbcloudconnector.com/CC/api/",
+    "FDBAuthorizationKey": "SHAREDKEY 214512:8+dWskmjgeC5nQ072vZ7D7e/Y78sIOrxd7z1TXxkA1I="
+  },
   "AllowedHosts": "*"
 }
